[tool.poetry]
name = "hw12"
version = "0.1.0"
description = "GoIT Web HW12"
authors = ["piavik <piavik@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
fastapi = "^0.109.2"
pydantic-extra-types = "^2.5.0"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
phonenumbers = "^8.13.30"
email-validator = "^2.1.0.post1"
faker = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
